--- a/Publisher/Publisher.vbproj
+++ b/Publisher/Publisher.vbproj
@@ -86,6 +86,7 @@
       <DependentUpon>FormPublisherView.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GlobalClass.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
