--- a/Publisher/Publisher.vbproj
+++ b/Publisher/Publisher.vbproj
@@ -80,6 +80,7 @@
     <Compile Include="AboutBox.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ApplicationEvents.vb" />
     <Compile Include="FormPublisherView.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +104,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="SplashScreen.Designer.vb">
+      <DependentUpon>SplashScreen.vb</DependentUpon>
+    </Compile>
+    <Compile Include="SplashScreen.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SQLCalls.vb" />
   </ItemGroup>
   <ItemGroup>
@@ -117,6 +124,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SplashScreen.resx">
+      <DependentUpon>SplashScreen.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -166,6 +176,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\book-stack_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\book_stack1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\book_stack5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\book_stack6.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
